--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "blog"
   ],
   "author": "joaomelo",
-  "license": "ISC",
+  "license": "CC-BY-SA-4.0",
   "bugs": {
     "url": "https://github.com/joaomelo/blog/issues"
   },
@@ -27,12 +27,6 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
-    "eslint": "^7.0.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "moment": "^2.25.3",
     "rimraf": "^3.0.2"
   },
