--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -2,6 +2,10 @@ backend:
   name: github
   branch: master
   repo: joaomelo/blog
+  site_domain: blog.melo.plus
+  api_root: https://api.github.com
+  base_url: https://api.github.com
+  auth_endpoint: auth
 publish_mode: editorial_workflow
 media_folder: "src/media" # Media files will be stored in the repo under static/images/uploads
 public_folder: "/media" # The src attribute for uploaded media will begin with /images/uploads
