--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,3 +36,11 @@ jobs:
           node-version: 12
       - run: npm ci
       - run: npm run build
+      - uses: EndBug/add-and-commit@v4
+        with:
+          add: 'docs'
+          force: true
+          message: 'automatic build'
+          ref: 'master'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
