--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf docs/*",
-    "start": "npm run clean && eleventy --serve",
-    "build": "npm run clean && eleventy"
+    "start": "npm run clean && cross-env ELEVENTY_ENV=dev eleventy --serve",
+    "build": "npm run clean && cross-env ELEVENTY_ENV=prod eleventy"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,8 @@
     "@11ty/eleventy": "^0.11.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.1",
     "@toycode/markdown-it-class": "^1.2.4",
-    "moment": "^2.25.3",
+    "cross-env": "^7.0.2",
+    "moment": "^2.26.0",
     "rimraf": "^3.0.2"
   },
   "dependencies": {}
